--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.10.0
 attrs==25.4.0
 Django==5.2.8
 djangorestframework==3.16.1
+gunicorn==23.0.0
 inflection==0.5.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
